src/test/resources/templates/invalid/no-template-args.kool
object Program4 {
  def/**/main () : Unit = {
    println(new Test<>());
  }
}

class Test<T1, T2> { }